# pydpm

./: .env  .gitignore  API_DOCUMENTATION.md  AST_GENERATION_LEVELS.md  DEVELOPERS_GUIDE.md  README.md  REMAINING_ISSUES.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  fix_imports.py  pyproject.toml  verify_relationship.py  verify_releases.py
.agent/: project_instructions.md
.github/workflows/: release.yml
_legacy/: README.md
examples/: instance_api_usage.py  instance_example.json  multi_instance_scrit.json
py_dpm/: __init__.py  client.py  database.py  db_utils.py  migration.py  models.py
py_dpm/AST/: DpmXlCodeGenerator.py  DpmXlParsingUtils.py  MLGeneration.py  ModuleAnalyzer.py  ModuleDependencies.py  SubaASTConstructor.py  SubaCodeGenerator.py  SubaDpmXlTranspiler.py  SubaParsingUtils.py  check_operands.py
py_dpm/Models/: models.py
py_dpm/OperationScopes/: OperationScopeService.py
py_dpm/Operators/: ConditionalOperators.py
py_dpm/Utils/: ast_serialization.py
py_dpm/ValidationsGeneration/: PropertiesConstraintsProcessor.py  Utils.py  VariantsProcessor.py
py_dpm/api/: __init__.py  common_types.py  complete_ast.py  data_dictionary.py  explorer.py  operation_scopes.py  semantic.py  syntax.py
py_dpm/cli/: __init__.py  main.py
py_dpm/dpm/: __init__.py  mixins.py  (+2 more)
tests/: conftest.py  test_cli_semantic.py  test_data_dictionary_releases.py  test_default_value_type_check.py  test_get_table_details.py  test_get_tables_date_filter.py  test_implicit_open_keys.py  test_interval_type_validation.py  test_query_refactor.py  test_semantic_release.py
(+84 files in other folders)
